--- a/app/src/app/app.component.css
+++ b/app/src/app/app.component.css
@@ -1,35 +1,24 @@
 :host {
-    --bright-blue: oklch(51.01% 0.274 263.83);
     --electric-violet: oklch(53.18% 0.28 296.97);
-    --french-violet: oklch(47.66% 0.246 305.88);
     --vivid-pink: oklch(69.02% 0.277 332.77);
-    --hot-red: oklch(61.42% 0.238 15.34);
     --orange-red: oklch(63.32% 0.24 31.68);
-
-    --gray-900: oklch(19.37% 0.006 300.98);
-    --gray-700: oklch(36.98% 0.014 302.71);
     --gray-400: oklch(70.9% 0.015 304.04);
 
-    --red-to-pink-to-purple-vertical-gradient: linear-gradient(
+    --vert-grad: linear-gradient(
       180deg,
       var(--orange-red) 0%,
       var(--vivid-pink) 50%,
       var(--electric-violet) 100%
     );
 
-    --red-to-pink-to-purple-horizontal-gradient: linear-gradient(
+    --hori-grad: linear-gradient(
       90deg,
       var(--orange-red) 0%,
       var(--vivid-pink) 50%,
       var(--electric-violet) 100%
     );
 
-    font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-      Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-      "Segoe UI Symbol";
-    box-sizing: border-box;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+    font-family: "Inter";
   }
   .leaderbords {
     display: flex;
@@ -49,14 +38,14 @@
 
   .divider {
     width: 1px;
-    background: var(--red-to-pink-to-purple-vertical-gradient);
+    background: var(--vert-grad);
     margin-inline: 0.5rem;
   }
 
   .horizontal-divider {
     height: 1px;
     width: 70%;
-    background: var(--red-to-pink-to-purple-horizontal-gradient);
+    background: var(--hori-grad);
     margin-block: 1.5rem;
     min-width: 300px;
   }
@@ -119,7 +108,6 @@
       align-items: center;
       justify-content: center;
       width: 100%;
-      font-size:large;
       color: rgb(72, 72, 72);
   }
   .leaderboard-row:nth-child(odd){
@@ -130,20 +118,17 @@
     height: 3rem;
     padding: 5px;
     font-size:large;
-    color: rgb(72, 72, 72);
   }
 
   @media screen and (max-width: 760px) {
     .leaderbords {
       flex-direction: column;
       align-items: center;
-      width: max-content;
     }
-
     .divider {
       height: 1px;
-      width: 100%;
-      background: var(--red-to-pink-to-purple-horizontal-gradient);
+      width: 70%;
+      background: var(--hori-grad);
       margin-block: 1.5rem;
     }
-  }/* You can add global styles to this file, and also import other style files */
+  }
